Wip on bootstrap compiler